feat(workout): first-class stored structure with canonical allure model
The workout becomes data, not parsed text: V6 stores a JSON tree of blocks —
allure (Lente/EF/Course/Seuil 60/Seuil 30/VMA/Sprint), seconds, terrain
(côte/descente) — and loops (count + ≥2 blocks). The parser is demoted to an
import/backfill tool with deterministic rules: session zone+duration
synthesize a block when the text has none, warm-ups default to EF and
cool-downs to Lente, 'intensité maximale' maps to Seuil 30, strides (lignes
droites or metre-based accelerations) become Sprint 20 sec + Lente 1 min
loops, gainage/renfo fragments never pollute a run, EF wins over incidental
'marche' mentions, unstated recoveries get deterministic defaults. Create/
update endpoints accept builder-provided structures; POST
/api/sessions/backfill-workouts recomputes a user's plan. The .fit export
reads the STORED tree — allure-named steps, native nested repeats, REST
intensity on récupérations.